# gvi-gaussian-process

./: .gitignore  README.md  pyproject.toml
experiments/: concatenate_results.py  data.py  generate_configs.py  generate_myriad_commands.py  generate_shell_commands.py  neural_networks.py  nngp_kernels.py  plotters.py  resolvers.py  schemes.py  trainer.py  trainers.py  utils.py
literature-review/: generalizing-variational-inference.tex  gwi-in-fs.tex  other-notes.tex  paper.sty  references.bib
mockers/: empirical_risk.py  gaussian_measures.py  gp.py  kernel.py  kernels.py  mean.py  mean_functions.py  neural_network.py  regularisation.py
notebooks/: _nngp_toy_example.ipynb  _nngp_toy_example.ipynb.REMOVED.git-id  _toy_example.ipynb  classification-ard-toy-example.ipynb  classification-ard-toy-example.ipynb.REMOVED.git-id  classification-conv-nngp-toy-example.ipynb  classification-conv-nngp-toy-example.ipynb.REMOVED.git-id  classification-mlp-nngp-toy-example.ipynb  classification-mlp-nngp-toy-example.ipynb.REMOVED.git-id  classification-toy-example.ipynb  classification-toy-example.ipynb.REMOVED.git-id  classification.ipynb  demo_gaussian_process.ipynb  gaussian_measures.ipynb  gaussian_process_demo.ipynb  nngp_toy_example.ipynb  nngp_toy_example.ipynb.REMOVED.git-id  regression-toy-example.ipynb  regression-toy-example.ipynb.REMOVED.git-id  toy_example.ipynb  toy_example.ipynb.REMOVED.git-id  toy_examples.ipynb  toy_examples.ipynb.REMOVED.git-id
notes/: notes.bib  notes.tex  paper.sty
scripts/: _regression_toy_example.py  regression_toy_example.py
src/: __init__.py  _dissimilarity_metrics.py  _gaussian_measure.py  _mean_functions.py  _parameters.py  classification_models.py  custom_types.py  decorators.py  dissimilarity_metrics.py  distributions.py  gaussian_measure.py  gaussian_measures.py  gaussian_wasserstein_inference.py  gaussian_wasserstein_metric.py  generalised_variational_inference.py  inducing_points_selection.py  module.py  utils.py
tests/: reference_kernels_test.py  test_approximate_gaussian_measures.py  test_approximate_kernels.py  test_approximate_mean_functions.py  test_bhattacharyya_regularisation.py  test_empirical_risks.py  test_gaussian_process_classification.py  test_gaussian_process_regression.py  test_gaussian_wasserstein_metric.py  test_gaussian_wasserstein_regularisation.py  test_generalised_variational_inference.py  test_inducing_points_selection.py  test_kernels.py  test_matrix_operations.py  test_mean_functions.py  test_means.py  test_multinomial_wasserstein_regularisation.py  test_point_wise_bhattacharyya_regularisation.py  test_reference_gaussian_measures.py  test_reference_kernels.py  test_reference_mean_functions.py  test_regularisations.py  (+1 more)
(+333 files in other folders)
