[tool.poetry]
name = "gaussian-wasserstein-inference-in-function-spaces"
version = "0.0.0"
description = "Implementation of Gaussian Wasserstein Inference in Function Spaces"
authors = [
    "James Wu <jian.wu.22@ucl.ac.uk>"
]

[tool.poetry.dependencies]
python = "~3.10"

# Core dependencies
numpy="~1.24.1"
scipy="~1.8.1"
jax="^0.4.1"
optax = "^0.1.4"
scikit-learn = "^1.2.0"
matplotlib = "^3.6.2"
flax = "^0.6.3"

[tool.poetry.dev-dependencies]
black = "~22.6"
isort = "~5.10"
pytest = "~7.2"
ipykernel = "^6.20.1"

[tool.isort]
skip = [".venv"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
