[tool.poetry]
name = "gaussian-wasserstein-inference-in-function-spaces"
version = "0.0.0"
description = "Implementation of Gaussian Wasserstein Inference in Function Spaces"
authors = [
    "James Wu <jian.wu.22@ucl.ac.uk>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"

# Core dependencies
numpy = "^1.23.4"
scipy="^1.8"
jax="^0.4.1"
optax = "^0.1.4"
scikit-learn = "^1.2.0"
matplotlib = "^3.6.2"
flax = "^0.6.3"
neural-tangents = "^0.6.1"
pydantic = "^1.10.9"
python-mnist = "^0.7"
tqdm = "^4.65.0"

[tool.poetry.dev-dependencies]
black = "~22.6"
ipykernel = "^6.20.1"
isort = "~5.10"
mock = "^5.0.2"
pytest = "~7.2"

[tool.isort]
skip = [".venv"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
