[tool.poetry]
name = "gaussian-wasserstein-inference-in-function-spaces"
version = "0.0.0"
description = "Implementation of Gaussian Wasserstein Inference in Function Spaces"
authors = [
    "James Wu <jian.wu.22@ucl.ac.uk>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
#python = "~3.10"

# Core dependencies
numpy = "^1.23.4"
scipy="^1.8"
optax = "^0.1.4"
scikit-learn = "^1.2.0"
matplotlib = "^3.6.2"
flax = "^0.6.3"
tensorflow = "~2.13"
neural-tangents = "^0.6.2"
pydantic = "^1.10.9"
python-mnist = "^0.7"
tqdm = "^4.65.0"
jax = { extras = ["cuda12_pip"], version = "0.4.13" } # use for GPU
#jax="0.4.13" # use for CPU
#jaxlib="0.4.13" # use for CPU

[tool.poetry.dev-dependencies]
black = "~22.6"
ipykernel = "^6.20.1"
isort = "~5.10"
mock = "^5.0.2"
pytest = "~7.2"
pytest-cov = "^4.1.0"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

# use for GPU
[[tool.poetry.source]]
name = "jax_cuda"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
default = false
secondary = false

[tool.isort]
skip = [".venv"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
